Revision history for HTML::StateTable

          - Better error handling
          - Set text colour in LESS
          - Only four table roles to doc
          - Only table roles left to POD
          - POD updates
          - Weakens request
          - Configurable now per user
          - Minor CSS improvements
          - Responsive tables
          - CSS fonts and svg icons
          - Starts animation role
          - Replaces rs store/fetch with util library calls
          - Adds tag sections
          - Adds messages to form role. Resets modifiers
          - Use unicode chars for bool cell trait
          - Adds bool cell trait
          - Adds support for the object view table
          - Chartable missing div fix
          - Row count fix
          - Weakened context reference. Nasty hack in renderer for top control
          - Switched to using less
          - Changed filterable control character
          - Fixes table row count usage
          - Warn of errors calling column info in foreign sort
          - Renderer captures render errors and returns them as text
          - StateChanged now a resultset method
          - Page and page size now table roles
          - Charts can locates left and right too
          - Tidies up naming of serialised keys
          - Charts refresh only when their state changes
          - Adds POD for column, row and cell classes
          - Updates README.md
          - Adds POD for state table class
          - Updates prereqs and meta data
          - Adds chartable table role. Uses HighCharts.js
          - Configurable dialog clear/resets/saves row order
          - Added sequence number to JS files
          - Completes reorderable
          - Adds reorderable role
          - Completes configurable updates of table and preferences
          - Display tags appended to cell content
          - Adds force limit and tag table roles
          - Adds Active and HighlightRow row traits