@@ -1,23 +1,25 @@
 #colours() {
     active-column: bisque;
-    button-background: #e9e9ed;
-    button-border: gray;
-    button-hover: lightgray;
-    close-background: orange;
+    button-bg: bisque;
+    button-border: #e3e3e3; // grey89
+    button-hover: limegreen;
+    button-text: black;
+    close-bg: orange;
     contrast: white;
     control-text: gray;
-    error-background: lightpink;
+    error-bg: lightpink;
     header-border: gray;
     link: seagreen;
-    message-background: khaki;
-    panel-background: ivory;
+    message-bg: khaki;
+    panel-bg: ivory;
     panel-shadow: gray;
     row-even: ivory;
     row-highlight: lightpink;
     row-inactive: gainsboro;
     row-odd: linen;
+    tag-bg: #e9e9ed;
     text: black;
-    title-background: linen;
+    title-bg: linen;
     title-border: orange;
 }
 #fonts() {
@@ -26,6 +28,12 @@
     data: 'Roboto Slab', 'DejaVu Serif', 'Sitka Small', serif;
     mono: 'Nimbus Mono PS', 'Courier New', monospace;
     system: Roboto, system-ui, sans-serif;
+}
+#grads() {
+    button-border-bg: radial-gradient(
+        #colours[button-hover], transparent, transparent
+    );
+    error-fade: linear-gradient(to right, transparent, #colours[error-bg] 80%);
 }
 body {
     counter-reset: section;
@@ -37,7 +45,7 @@ body {
         text-transform: uppercase;
     }
     table {
-        border-collapse: collapse; display: block; margin: 0.25rem 0;
+        border-collapse: collapse; display: block; margin: 0.25rem 0 0.5rem;
         position: relative; width: 100%;
         td {
             border-right: 1px solid transparent; font-family: #fonts[data];
@@ -64,7 +72,7 @@ body {
             text-align: right;
         }
         th {
-            background: #colours[panel-background];
+            background: #colours[panel-bg];
             border-right: 1px solid; border-color: #colours[header-border];
             font-family: #fonts[system]; font-weight: normal;
             white-space: nowrap;
@@ -157,7 +165,7 @@ body {
         }
     }
     .status-messages {
-        background: #colours[message-background]; border-radius: 5px;
+        background: #colours[message-bg]; border-radius: 5px;
         color: #colours[text]; font-family: #fonts[system]; font-size: 0.8rem;
         margin-top: 0.25rem; padding: 0.25rem 0.5rem; text-align: center;
     }
@@ -203,7 +211,7 @@ body {
     .cell-tag .tag-arrow-left {
         border-top: 8px solid transparent;
         border-bottom: 8px solid transparent; border-right: 8px solid;
-        border-right-color: #colours[button-background];
+        border-right-color: #colours[tag-bg];
         height: 0; width: 0;
     }
     .cell-tag .tag-arrow-left::after {
@@ -211,7 +219,7 @@ body {
         position: absolute; transform: translate(0.25rem, -100%);
     }
     .cell-tag .tag-value {
-        background: #colours[button-background]; border-radius: 0 3px 3px 0;
+        background: #colours[tag-bg]; border-radius: 0 3px 3px 0;
         color: #colours[link]; cursor: pointer; font-family: #fonts[data];
         font-size: x-small; padding: 2px 0.25rem;
     }
@@ -223,7 +231,7 @@ body {
     }
     .filter-dialog,
     .preference-dialog {
-        background: #colours[panel-background]; border: 1px solid;
+        background: #colours[panel-bg]; border: 1px solid;
         border-radius: 3px; position: absolute; top: 25px; z-index: 10;
     }
     .preference-dialog.control-right {
@@ -243,7 +251,7 @@ body {
         justify-content: space-between;
     }
     .dialog-close {
-        align-items: center; background: #colours[close-background];
+        align-items: center; background: #colours[close-bg];
         border-radius: 3px; color: #colours[contrast]; cursor: pointer;
         filter: sepia(66%); font-family: #fonts[system]; font-size: smaller;
         font-weight: bold; height: 100%; margin-top: 2px; padding: 0 0.25rem;
@@ -275,7 +283,7 @@ body {
         font-family: #fonts[system]; font-size: 0.8rem; line-height: 1rem;
     }
     .dialog-title {
-        background: #colours[title-background]; border-bottom: 1px solid;
+        background: #colours[title-bg]; border-bottom: 1px solid;
         border-color: #colours[title-border];
         color: #colours[text]; display: flex;
         font-family: #fonts[system]; font-size: 1rem; font-weight: bold;
@@ -318,15 +326,38 @@ body {
     .table-form .table-button:last-child, .table-form button:last-child {
         margin-right: 0;
     }
-    .table-form .table-button {
-        background: #colours[button-background]; border: 1px solid;
-        border-color: #colours[button-border]; border-radius: 3px;
-        color: #colours[text]; font-family: #fonts[system]; font-size: 12.5px;
-        font-weight: 400; padding: 2px 4px; text-align: center;
-        text-decoration: none; vertical-align: baseline;
+    .table-form .table-button, .table-form button, .dialog-form button {
+        background: #colours[button-bg];
+        border: 2px outset #colours[button-border]; border-radius: 50px;
+        color: #colours[link]; display: inline-block; line-height: 0.8rem;
+        overflow: hidden; padding: 0.25rem 0.75rem; position: relative;
+        text-decoration: none; transition: 0.5s;
+        span {
+            font-size: 0.7rem; letter-spacing: 0.1rem;
+            position: relative; text-decoration: none;
+            text-transform: uppercase; z-index: 3;
+        }
     }
-    .table-form .table-button:hover {
-        background: #colours[button-hover];
+    .table-form .table-button:hover, .table-form button:hover,
+    .dialog-form button:hover {
+        border: 2px inset #colours[button-border]; color: #colours[button-text];
+
+    }
+    .table-form .table-button::before, .table-form button::before,
+    .dialog-form button::before {
+        background: #grads[button-border-bg]; content: ''; display: block;
+        height: 3rem; left: var(--x); opacity: 0; position: absolute;
+        top: var(--y); transform: translate(-50%, -50%);
+        transition: opacity 0.5s; width: 3rem; z-index: 1;
+    }
+    .table-form .table-button:hover::before, .table-form button:hover::before,
+    .dialog-form button:hover::before {
+        opacity: 1;
+    }
+    .table-form .table-button::after, .table-form button::after,
+    .dialog-form button::after {
+        background: #colours[button-bg]; border-radius: 50px; content: '';
+        inset: 3px; position: absolute; z-index: 2;
     }
     .highcharts-figure {
         margin: 0;
@@ -375,12 +406,12 @@ body {
         margin-left: 0.5rem;
     }
     .table-form .credit-control {
-        padding-bottom: 0.5rem;
+        display: flex; padding-bottom: 0.5rem;
     }
 }
 .state-table .state-table table {
     margin-bottom: 0;
 }
 .state-table-error {
-    background: #colours[error-background]; margin: 0 16%;
+    background: #colours[error-bg]; margin: 0 16%;
 }
